Finished code changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="./assets/css/style.css" rel="stylesheet" type="text/css" />
     <link 
     rel="stylesheet" 
     href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
@@ -69,8 +69,8 @@
     <a href="https://www.google.com/search?q=9+month+puppies&sa=X&rlz=1C1GCEU_enUS1060US1060&biw=648&bih=744&tbm=shop&sxsrf=AB5stBhLDjTU_3fbF0JWGcjOYpbqDoSUwg%3A1690310071127&ei=txXAZPKNB7uPur8Pr9K_gAM&ved=0ahUKEwiyxeXav6qAAxW7h-4BHS_pDzAQ4dUDCAg&uact=5&oq=9+month+puppies&gs_lp=Egtwcm9kdWN0cy1jYyIPOSBtb250aCBwdXBwaWVzMgsQABgIGB4YGBiwAzILEK4BGMoDGLADGCdImwZQAFgAcAB4AJABAJgBXqABXqoBATG4AQPIAQCIBgGQBgI&sclient=products-cc">9 mo. Pups</a>
 </div>
       </span>
-      <span>
-      <div>
+<span>
+<div>
     <img src="http://placekitten.com/100/100" alt="Kitten staring curiously.">
 </div>
 <div>
